<resources>
    <string name="app_name">CodingRode</string>

    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>
    <string name="bottom_navigation_bar">底部导航栏</string>
    <string name="BottomNavigationView">BottomNavigationView</string>
    <string name="TabLayout">TabLayout</string>
    <string name="RadioButton">RadioButton</string>
    <string name="Normal">Normal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Share">Share</string>
    <string name="wechat">微信</string>
    <string name="contracts">通讯录</string>
    <string name="discovery">发现</string>
    <string name="me">我</string>
    <string name="Normal_ViewPager">Normal+ViewPager</string>
    <string name="qrcode">二维码</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="simple_recyclerView">普通的RecyclerView</string>
    <string name="advance_recyclerView">RecyclerView封装</string>
</resources>
