<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_bottom_navigation_view"
                style="@style/TextView_MatchParent"
                android:text="@string/BottomNavigationView"/>
            <TextView
                android:id="@+id/tv_tab_layout"
                style="@style/TextView_MatchParent"
                android:text="@string/TabLayout"/>
            <TextView
                android:id="@+id/tv_radio_button"
                style="@style/TextView_MatchParent"
                android:text="@string/RadioButton"/>
            <TextView
                android:id="@+id/tv_normal"
                style="@style/TextView_MatchParent"
                android:text="@string/Normal"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>