<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@android:color/white">

            <LinearLayout
                android:id="@+id/layout_message"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rlMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvMessageNormal"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_centerInParent="true"
                        android:background="@mipmap/message_normal"
                        android:button="@null"
                        android:gravity="center"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvMessagePress"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_centerInParent="true"
                        android:background="@mipmap/message_press"
                        android:button="@null"
                        android:gravity="center"
                        android:textColor="@color/green"
                        android:textSize="12sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvMessageTextNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wechat"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvMessageTextPress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wechat"
                        android:textColor="@color/green"
                        android:textSize="12sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_contracts"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rlContacts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvContactsNormal"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:background="@mipmap/contacts_normal"
                        android:button="@null"
                        android:gravity="center"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvContactsPress"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:background="@mipmap/contacts_press"
                        android:button="@null"
                        android:gravity="center"
                        android:textColor="@color/green"
                        android:textSize="12sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvContactsTextNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contracts"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvContactsTextPress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contracts"
                        android:textColor="@color/green"
                        android:textSize="12sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_discovery"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rlDiscovery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvDiscoveryNormal"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:background="@mipmap/discovery_normal"
                        android:button="@null"
                        android:gravity="center"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvDiscoveryPress"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:background="@mipmap/discovery_press"
                        android:button="@null"
                        android:gravity="center"
                        android:textColor="@color/green"
                        android:textSize="12sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvDiscoveryTextNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discovery"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvDiscoveryTextPress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discovery"
                        android:textColor="@color/green"
                        android:textSize="12sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_me"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rlMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:id="@+id/tvMeNormal"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:background="@mipmap/me_normal"
                        android:button="@null"
                        android:gravity="center"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvMePress"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:background="@mipmap/me_press"
                        android:button="@null"
                        android:gravity="center"
                        android:textColor="@color/green"
                        android:textSize="12sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvMeTextNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/me"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvMeTextPress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/me"
                        android:textColor="@color/green"
                        android:textSize="12sp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>